tests/ui/regions/issue-102392.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102392.rs:2:5
   |
LL | fn g(f: for<'a> fn(fn(&str, &'a str))) -> bool {
   |                                           ---- expected `bool` because of return type
LL |     f
   |     ^ expected `bool`, found fn pointer
   |
   = note:    expected type `bool`
           found fn pointer `for<'a> fn(for<'b> fn(&'b str, &'a str))`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
